--- a/Game.html
+++ b/Game.html
@@ -23,7 +23,7 @@
                 <h4>GTA</h4>
                 <div class="progress-line"><span></span></div>
                 <div class="info">
-                    <a href="indexx.html">Play</a>
+                    <a href="https://f544-2001-44c8-4720-d469-707e-79f5-4377-cb78.ap.ngrok.io">Play</a>
                 </div>
             </div>
         </div>
