--- a/Game.html
+++ b/Game.html
@@ -10,50 +10,18 @@
 </head>
 <body>
     <header>
-        <a  class="iogo">CG Game</a>
+        <a href="index.html" class="iogo">CG Game</a>
     </header>
 
      <!--lolo-->
      <div class="lolo" id="game">
         <h2>Game</h2>
     <div class="caca">
-        <div class="card" data-item="pc">
-            <img src="https://upload.wikimedia.org/wikipedia/en/a/a5/Grand_Theft_Auto_V.png">
-            <div class="po">
-                <h4>GTA</h4>
-                <div class="progress-line"><span></span></div>
-                <div class="info">
-                    <a href="https://f544-2001-44c8-4720-d469-707e-79f5-4377-cb78.ap.ngrok.io">Play</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" data-item="pc">
-            <img src="https://i.pinimg.com/originals/8a/8b/50/8a8b50da2bc4afa933718061fe291520.jpg">
-            <div class="po">
-                <h4>DOAT2</h4>
-                <div class="progress-line"><span></span></div>
-                <div class="info">
-                    <a href="https://f544-2001-44c8-4720-d469-707e-79f5-4377-cb78.ap.ngrok.io">Play</a>
-                </div>
-            </div>
-        </div>
 
         <div class="card" data-item="pc">
             <img src="https://s.isanook.com/ga/0/rp/r/w850/ya0xa0m1w0/aHR0cHM6Ly9zLmlzYW5vb2suY29tL2dhLzAvdWQvMjEzLzEwNjU3MTMvdmFsb3JhbnQtKDEpLmpwZw==.jpg">
             <div class="po">
                 <h4>VALORANT</h4>
-                <div class="progress-line"><span></span></div>
-                <div class="info">
-                    <a href="https://f544-2001-44c8-4720-d469-707e-79f5-4377-cb78.ap.ngrok.io">Play</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" data-item="pc">
-            <img src="https://play-lh.googleusercontent.com/hmmVbO9lud4SBuDpDm4wrCuIJVWa-y6meV578pAPeeEUcBhPWhWjZocEr8bslhKn7Q">
-            <div class="po">
-                <h4>FIFA O4</h4>
                 <div class="progress-line"><span></span></div>
                 <div class="info">
                     <a href="https://f544-2001-44c8-4720-d469-707e-79f5-4377-cb78.ap.ngrok.io">Play</a>
@@ -71,7 +39,6 @@
             <p><i></i>GC All Game</p>
             <ul class="opo">
                 <li><a href="https://web.facebook.com/chaimongkond.yodkaeww/">F</a><i></i></li>
-                <li><a>Gmali</a><i></i></li>
             </ul>
         </div>
     </footer>
