--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="nono">
                 <h2>CG Game<br></h2>
                 <p></p>
-                <a href=Game.html class="lolo">Meeting Talking</a>
+                <a href=Game.html class="lolo">Meeting</a>
             </div>
             <img src="https://codewithsadee.github.io/gamics/assets/images/hero-banner.png">
         </div>
@@ -34,7 +34,6 @@
                     <p><i></i>GC All Game</p>
                     <ul class="opo">
                         <li><a href="https://web.facebook.com/chaimongkond.yodkaeww/">F</a><i></i></li>
-                        <li><a>Gmali</a><i></i></li>
                     </ul>
                 </div>
             </footer>
