--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a  class="iogo">CG Game</a>
+        <a href="index.html" class="iogo">CG Game</a>
     </header>
 
     <!---Home Fo-->
