--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <footer>
                 <div class="in">
                     <a class="popo">Game</a>
-                    <p><i></i>GC All Game</p>
+                    <p><a href="vt.html">วิธีการเข้าใช้งานเว็ปไซต์</p></a>
                     <ul class="opo">
                         <li><a href="https://web.facebook.com/chaimongkond.yodkaeww/">F</a><i></i></li>
                     </ul>
