--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="nono">
                 <h2>CG Game<br></h2>
                 <p></p>
-                <a href=Game.html class="lolo">Play</a>
+                <a href=Game.html class="lolo">Meeting</a>
             </div>
             <img src="https://codewithsadee.github.io/gamics/assets/images/hero-banner.png">
         </div>
