--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <a href="index.html" class="iogo">CG Game</a>
+        <a href=koko.html class="lolo">Mord</a>
     </header>
 
     <!---Home Fo-->
