--- a/Game.html
+++ b/Game.html
@@ -24,7 +24,7 @@
                 <h4>VALORANT</h4>
                 <div class="progress-line"><span></span></div>
                 <div class="info">
-                    <a href=" https://d36a-2001-44c8-4149-9936-8c3e-ece8-93c7-2973.ap.ngrok.io">Play</a>
+                    <a href="https://055a-2001-44c8-444f-6e9c-f54e-8386-bff-b382.ap.ngrok.io ">เข้าคุย</a>
                 </div>
             </div>
         </div>
@@ -35,10 +35,12 @@
       <!--Footer-->
       <footer>
         <div class="in">
-            <a class="popo">Game</a>
+            <center>
+            <a class="popo"><center>Game</center></a>
             <ul class="opo">
                 <li><a href="https://web.facebook.com/chaimongkond.yodkaeww/">F</a><i></i></li>
             </ul>
+            </center>
         </div>
     </footer>
     
