--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="iogo">CG Game</a>
+        <a  class="iogo">CG Game</a>
     </header>
 
     <!---Home Fo-->
@@ -21,8 +21,8 @@
             <div class="nono">
                 <h2>CG Game<br></h2>
                 <p></p>
-                <a href=Game.html class="lolo">Meeting</a>
-                <a href=koko.html class="lolo">Mord</a>
+                <a href=Game.html class="lolo">เข้าห้องแชท</a>
+                <a href=koko.html class="lolo">วิธีการเข้าใช้</a>
             </div>
             <img src="https://codewithsadee.github.io/gamics/assets/images/hero-banner.png">
         </div>
@@ -31,8 +31,7 @@
             <!--Footer-->
             <footer>
                 <div class="in">
-                    <a class="popo">Game</a>
-                    <p></p>
+                    <a class="popo">CG Game</a>
                     <ul class="opo">
                         <li><a href="https://web.facebook.com/chaimongkond.yodkaeww/">F</a><i></i></li>
                     </ul>
