--- a/koko.html
+++ b/koko.html
@@ -18,19 +18,9 @@
     <div class="fo " id="home">
         <div class="bg">
             <div class="nono">
-                <h2>ความเป็นมาของเว็ปไซต์<br></h2>
-                <p>ปัจจุบันมีเว็บไซต์ที่เกี่ยวข้องกับการหาเพื่อน และเว็บไซต์ที่เกี่ยวกับการพูดคุยในเรื่องต่างๆซึ่งชนิดเว็บไซต์ที่เป็นยอดนิยมชนิดหนึ่ง คือ เว็บไซต์ที่เกี่ยวกับการหาเพื่อนเล่นเกมหรือแม้กระทั้งเว็บไซต์ที่เกี่ยวกับการพูดคุย 
-                    ด้วยปัจจุบันที่เทคโนโลยีมีการพัฒนาขึ้นให้มีความทันสมัยเพื่อรองรับการใช้ชีวิตของคนสมัยใหม่ ทำให้การใช้เว็บไซต์เพื่อการพูดคุยและการหาเพื่อนในการเล่นเกมในยุคนี้สามารถใช้งานได้ง่ายเพราะมีความสะดวกรวดเร็ว 
-                    และเข้าถึงได้ง่ายสำหรับผู้ใช้งานที่ต้องการหาคนเล่นเกมโดยเฉพาะผู้ใช้ที่ชอบเล่นเกมแต่ไม่มีเพื่อนเล่นเกมหรือพูดคุยด้วย จึงต้องการหาเพื่อนเล่นเกมกับผู้อื่นเพื่อจะได้มีเพื่อนและสังคมใหม่ๆ ที่แตกต่างจากสังคมปกติที่เป็นอยู่
-                    จากข้อความข้างต้นคณะผู้จัดทำเล็งเห็นถึงปัญหาที่พบคือ การที่ผู้เล่นเกมนั้นอาจไม่มีเพื่อนในการเล่นเกม ส่งผลให้ตัวผู้เล่นเกมอาจจะขาดแคลนสมาชิกในเกมนั้นได้ และส่งผลในเรื่องของสังคมที่เกี่ยวกับการ
-                    มีปฏิสัมพันธ์ เมื่อผู้เล่นต้องเล่นคนเดียว ทำให้ขาดการพูดคุยกับเพื่อนในเกมได้เนื่องจากการที่ตัวผู้เล่นนั้นจำเป็นที่จะต้องเล่นเกมโดยผู้เล่นคนเดียว ทั้งนี้คณะผู้จัดทำยังพบว่าสังคมเกมในปัจจุบันมีการเข้าถึงได้ยาก 
-                    หากต้องการที่จะหาเพื่อนเล่นเกม ผู้เล่นเกมนั้นจำเป็นต้องสุ่มหาผู้เล่นอื่นภายในเกมโดยภายในแต่ละเกมนั้นก็มักจะเจอแต่ผู้เล่นเกมที่ไม่ได้มีปฏิสัมพันธ์ที่ดีต่อผู้เล่นท่านอื่น หรือไม่มีการพูดคุยกับผู้เล่นท่านอื่น
-                     จึงเกิดเป็นแรงจูงใจที่ทำให้คณะผู้จัดทำพัฒนาโครงงานเว็บไซต์หาเพื่อนเล่นเกมด้วยทางคณะผู้จัดทำเลือกที่จะนำความรู้พื้นฐานที่เกี่ยวกับการสร้างเว็บไซต์มาพัฒนาโครงงาน โดยการนำเทคโนโลยีการสร้างและออกแบบเว็บไซต์
-                     มาพัฒนาเว็บไซต์ที่เกี่ยวข้องกับการหาเพื่อนมาเพื่อพูดคุยทางออนไลน์ทั้งนี้เว็บไซต์หาเพื่อนเล่นเกมจะพัฒนาให้เป็นเว็บไซต์ที่จะเปิดเส้นทางสู่ชุมชนของเกมมากขึ้น ให้เกิดความหลากหลายของการหาเพื่อนพูดคุยผ่านเว็บไซต์และเว็บไซต์
-                     ที่คณะผู้จัดทำพัฒนาขึ้นจะเป็นตัวช่วยให้กับผู้ใช้งานนั้นได้หาชุมชนที่เกี่ยวกับเกมที่ผู้ใช้นั้นต้องการ
-                 ดังนั้นทางคณะผู้จัดทำจึงมีแนวคิด ที่จะพัฒนาโครงงานเว็บไซต์หาเพื่อนเล่นเกมเพื่อเป็นศูนย์รวมในการหาเพื่อนเล่นเกมพูดคุยแลกเปลี่ยนความคิและแจ้งข้อมูลข่าวสารที่เกี่ยวกับเกมให้แก่ผู้ใช้งานโครงงานนี้สามารถนำไปต่อยอดพัฒนา
-                 ให้ดีมากขึ้นซึ่งเหมาะกับในยุคปัจจุบันที่เทคโนโลยีเข้ามามีบทบาทในชีวิตประจำวันซึ่งเกมมีบทบาทต่อพัฒนาการของวัยรุ่นและเด็กในยุคปัจจุบันเป็นอย่างมาก ด้วยผู้ปกครองจะค่อยดูแลเด็กในการเล่นเว็บไซต์นี้สำหรับเด็กที่มีอายุไม่ต่ำกว่าเกณฑ์ 18 ปีบริบูรณ์
-                 ทั้งนี้การพัฒนาระบบเว็บไซต์หาเพื่อนเล่นเกมจะทำให้ผู้ใช้งานได้ประโยชน์ในการใช้สูงสุดและการให้ผู้ใช้ได้สนุกกับเว็บไซต์ที่ผู้จัดทำสร้างขึ้นมา</p>
+                <h2>How to use / วิธีการใช้งาน<br></h2>
+                <p>
+                </p>
             </div>
         </div>
     </div>
