--- a/koko.html
+++ b/koko.html
@@ -19,6 +19,7 @@
         <div class="bg">
             <div class="nono">
                 <h2>How to use / วิธีการใช้งาน<br></h2>
+                <a href="https://drive.google.com/file/d/1xMJri0E8iP-FwoHpBV7pNphe8jkKNya4/view?usp=share_link">วิธีการใช้งาน</a>
                 <p>
                 </p>
             </div>
