--- a/Game.html
+++ b/Game.html
@@ -24,7 +24,7 @@
                 <h4>VALORANT</h4>
                 <div class="progress-line"><span></span></div>
                 <div class="info">
-                    <a href="https://f358-182-232-155-25.ap.ngrok.io">เข้าคุย</a>
+                    <a href=" https://748a-2001-44c8-444f-6e9c-b5da-37c2-5523-8e04.ap.ngrok.io">เข้าคุย</a>
                 </div>
             </div>
         </div>
