--- a/Game.html
+++ b/Game.html
@@ -24,7 +24,18 @@
                 <h4>VALORANT</h4>
                 <div class="progress-line"><span></span></div>
                 <div class="info">
-                    <a href=" https://748a-2001-44c8-444f-6e9c-b5da-37c2-5523-8e04.ap.ngrok.io">เข้าคุย</a>
+                    <a href="https://288e-2001-44c8-451f-36b6-25ce-842b-e288-36ac.ap.ngrok.io ">เข้าคุย</a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="card" data-item="pc">
+            <img src="https://s.isanook.com/ga/0/ud/222/1111449/rov_thumnail_1.jpg">
+            <div class="po">
+                <h4>ROV</h4>
+                <div class="progress-line"><span></span></div>
+                <div class="info">
+                    <a href="https://3e82-2001-44c8-451f-36b6-25ce-842b-e288-36ac.ap.ngrok.io ">เข้าคุย</a>
                 </div>
             </div>
         </div>
