--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="nono">
                 <h2>CG Game<br></h2>
                 <p></p>
-                <a href=Game.html class="lolo">เข้าห้องเกมส์</a>
+                <a href=Game.html class="lolo">เข้าห้องเกม</a>
                 <a href="https://drive.google.com/file/d/1xMJri0E8iP-FwoHpBV7pNphe8jkKNya4/view?usp=share_link" class="lolo">วิธีการเข้าใช้</a>
             </div>
             <img src="https://codewithsadee.github.io/gamics/assets/images/hero-banner.png">
