--- a/Game.html
+++ b/Game.html
@@ -24,7 +24,7 @@
                 <h4>VALORANT</h4>
                 <div class="progress-line"><span></span></div>
                 <div class="info">
-                    <a href="https://17ce-2001-44c8-4223-6190-80ee-7f9f-e54d-73b2.ap.ngrok.io/">เข้าคุย</a>
+                    <a href="https://0bba-2001-44c8-4223-6190-d060-2a27-6e8d-2ca3.ap.ngrok.io">เข้าคุย</a>
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
                 <h4>ROV</h4>
                 <div class="progress-line"><span></span></div>
                 <div class="info">
-                    <a href="https://5596-2001-44c8-4223-6190-80ee-7f9f-e54d-73b2.ap.ngrok.io/">เข้าคุย</a>
+                    <a href=" https://46f8-2001-44c8-4223-6190-d060-2a27-6e8d-2ca3.ap.ngrok.io">เข้าคุย</a>
                 </div>
             </div>
         </div>
