--- a/index.html
+++ b/index.html
@@ -1,79 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CG Game</title>
-    <link rel="stylesheet" href="stylee.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://png.pngtree.com/png-vector/20190507/ourmid/pngtree-samurai-skull-esports-logo-gaming-mascot-png-image_1030880.jpg"/>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="google-site-verification=UIt_EyrkAmz0KQ_cIvyX4knUUM0EcmNQbE_HoEoqm0g">
+    <title>Happy Birthday P'Da</title>
+    <style>
+        /* รีเซ็ตค่าเริ่มต้นของ CSS */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #b3e5fc;
+            color: #1a1a1a;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+            flex-direction: column;
+        }
+
+        .container {
+            text-align: center;
+            max-width: 600px;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+
+        /* ข้อความอวยพร */
+        h1 {
+            font-size: 3em;
+            color: #2196f3;
+            margin-bottom: 0.5em;
+        }
+
+        h2 {
+            font-size: 2em;
+            color: #2196f3;
+            margin-bottom: 1em;
+        }
+
+        /* รูปภาพคู่รัก */
+        .image-container {
+            margin: 20px 0;
+        }
+
+        .image-container img {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* ข้อความจากใจ */
+        .message-box {
+            background-color: #e3f2fd;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: left;
+            margin-top: 20px;
+            line-height: 1.6;
+            font-size: 1.1em;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <a  class="iogo">CG Game</a>
-    </header>
-
-    <!---Home Fo-->
-    <div class="fo " id="home">
-        <div class="bg">
-            <div class="nono">
-                <h2>CG Game<br></h2>
-                <p></p>
-                <a href=Game.html class="lolo">เข้าห้องเกม</a>
-                <a href="https://drive.google.com/file/d/1xMJri0E8iP-FwoHpBV7pNphe8jkKNya4/view?usp=share_link" class="lolo">วิธีการเข้าใช้</a>
-            </div>
-            <img src="https://codewithsadee.github.io/gamics/assets/images/hero-banner.png">
+    <div class="container">
+        <!-- ข้อความอวยพร -->
+        <h1>สุขสันต์วันเกิด</h1>
+        <h2>ถึงคนพิเศษของโค้ก 🎉🎂</h2>
+        
+        <!-- ข้อความจากใจ -->
+        <div class="message-box">
+            <p>สุขสันต์วันเกิดนะคับ! วันนี้เป็นวันพิเศษของพี่ดา โคักก็ไม่มีอะไรมากหลอกแค่อยากบอกว่า</p>
+            <p>แก่ขึ้นอีกปีแล้วนะพี่ ขอให้วันเกิดปีนี้พี่มีึวามสุขมากๆนะครับพี่ดาหวังอะไรของให้ได้อย่างนั้น</p>
+            <p>และก็ขอให้มีเงินเยอะๆสุขภาพแข้งแรงทุกๆวันนะจั้งใจทำงานขอให้สมหวังเรื่องรักขอให้ผ่านมันไปได้ด้วยดีนะค้าบบบ</p>
+            <p>โค้กไม่รูัว่าของขวัญชิ้นนี้พี่จะชอบไหมแต่โค้กทำมันมา6เดือนเต็มๆเว็ปนี้แหละแบบแค่อยากให้มันอยู่ตลอดไง</p>
+            <p>เพื่อปีหน้าไม่มีแบบนี้อีกแล้วแต่โค้กพยามมันมาเลยนะครั้งแรกด้วยที่ทำแบบนี้อะก็ขอบคุณนะที่เข้ามาในชีวิตโค้กเข้ามาคุยกันได้รู้จักกัน</p>
+            <p>ก็ยังรักและชอบพี่เสมอนะพี่ดา แฮปอีกครั้งนะครับบพี่ดา</p>
         </div>
     </div>
 
-            <!--Footer-->
-            <footer>
-                <div class="in">
-                    <a class="popo">CG Game</a>
-                    <ul class="opo">
-                        <li><a href="https://web.facebook.com/chaimongkond.yodkaeww/">F</a><i></i></li>
-                    </ul>
-                </div>
-            </footer>
-        </div>
-     </div>
+    <div class="container">
+        <!-- ข้อความอวยพรเพิ่มเติม -->
+        <h1>การเดินทางแอบชอบพี่ตลอด 1 ปี</h1>
+        <h2></h2>
         
-    <script>
-        /* sticky navbar */
-        window.addEventListener('scroll',function(){
-            var header = document.querySelector('header');
-            header.classList.togg('sticky'.window.scrolly > 5);
-        })
-
-        /* filitersble cards */
-
-        let list = document.querySelectorAll('.list');
-        let card = document.querySelectorAll('.card');
-
-        for(let i = 0; i<list.length; i++){
-        list[i].addEventListener('click',function(){
-        for(let j=0; j<list.length; j++){
-            list[j].classList.remove('active');
-        }
-        this.classList.add('active');
-
-        let datafilter = this.getAttribute('data-filter');
-
-        for(let k=0; k<card.length; k++)
-        {
-            card[k].classList.remove('active');
-            card[k].classList.add('hide');
-
-            if(card[k].getAttribute('data-item') == datafilter || datafilter == 'all'){
-                card[k].classList.remove('hide');
-                card[k].classList.add('active');
-
-            }
-        }
-    })
-}
-    </script>
+        <!-- ข้อความจากใจเพิ่มเติม -->
+        <div class="message-box">
+            <p>เริ่มไงดีอะ ก๋แบบพี่ดาน่าจะรุ้แหละว่าโค้กชอบพี่แต่เหมือนพึ่งรู้ไม่นานมานี้แต่จริงๆชอบมาตั้งนานแล้วเป็นปีได้มั้งน่าจะเกิน555</p>
+            <p>แบบช่วงแรกมองพี่่บ่อยมากจนเหมือนเป็นโรคจิตอะจริงนะเคยบอกแล้วละแต่อยากบอกผ่านในนี้แทนเพื่อได้กลับมาอ่านแต่จะเล่าไม่เยอะนะเดะยาวเกิน</p>
+            <p>ก็นั้นละแอบมองมาตลอดได้คุยบ้างแบผ่านยิ้มให้บ้างอะไรบ้างพี่ก็น่ารักดีนะในหลายๆมุมอะแบบคลั่งรักพี่สุดๆอะตอนนั้นอะจริงนะนิ</p>
+            <p>จนสุดท้ายโค้กได้เจอไอจีพี่ละก็แอดไปโหหแต่กว่าจะทำใจแอดได้นานมากกอะสุดก็จนได้ละเราก็ได้คุยกันมันเหมือนฝันมากๆเลยนะแบบว่าได้คุยกะคนที่เราชอบมาเป็นปีอะคือไม่มีอะไรดีไปกว่านี้แล้วอะ</p>
+            <p>จนวันหนึ่งได้บอกชอบพี่ไปแบก็อยากให้พี่รูํนั้นละว่าเราชอบพี่นะชอบมานานแล้วด้วยอะไรประมาณนี้หลังจากก็ตามที่รู้เลยหรือพี่จะไปติดตามในไดอารี่ต่อได้นะโค้กพิมเท่านี้ละยังไงก็ยังชอบพี่เหมือนนะพี่ดื้อของโค้ก</p>
+            <p>รักกกกกกกกกพี่มากกกกกกจุบบบบบบบบบ</p>
+        </div>
+    </div>
 </body>
 </html>
